# library-cli

./: .gitignore  .pre-commit-config.yaml  README.md  makefile  pyproject.toml
tests/: test_library_cli.py
