[tool.poetry]
name = "library-cli"
version = "1.0.0"
description = "A library functionality as a command line interface"
authors = ["Raphael Castro <rafaphcastro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
pre-commit = "^2.11.1"
black = {extras = ["d"], version = "^20.8b1"}
isort = "^5.8.0"
flake8 = "^3.9.0"
pytest-pspec = "^0.0.4"
pytest-watch = "^4.2.0"
pytest-picked = "^0.4.6"
pytest-custom-exit-code = "^0.3.0"
pytest-cov = "^2.11.1"

[tool.pytest.ini_options]
addopts = '--pspec -rx --tb=short'

[tool.black]
target-version = ["py38"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
